[package]
name = "schedule-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "schedule_tool"
path = "src/lib.rs"

[dependencies]
bdays = "0.1.4"
chrono = { version = "0.4.42", features = ["serde"] }
polars = { version = "0.44", features = ["lazy", "dtype-date", "temporal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
axum = { version = "0.7", optional = true }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"], optional = true }
parking_lot = { version = "0.12", optional = true }
rayon = "1"
petgraph = "0.6"
rusqlite = { version = "0.31", optional = true, features = ["bundled"] }

[features]
default = ["sqlite"]
cli = ["dep:axum", "dep:tokio", "dep:parking_lot"]
cli_api = ["dep:axum", "dep:tokio", "dep:parking_lot"]
http_api = ["dep:axum", "dep:tokio", "dep:parking_lot"]
sqlite = ["dep:rusqlite"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
required-features = ["cli_api"]

[[bin]]
name = "http"
path = "src/bin/http.rs"
required-features = ["http_api"]

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
assert_cmd = "2"
predicates = "3"
